# scenic-external-sampler

./: .gitignore  LICENSE  README.md  pyproject.toml  test.scenic
scenic_external_sampler/: regions.py  sampler.py
tests/: test_regions.py  test_sampler.py  test_scenario.py
