[tool.poetry]
name = "scenic-external-sampler"
version = "0.1.0"
description = ""
authors = ["Arjan Molenaar <gaphor@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scenic = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
